syntax = "proto3";

package account;

import "google/protobuf/empty.proto";

message RegisterEmailRequest {
    string email = 1;
    string password = 2;
    string family_name = 3;
    string given_name = 4;
    string locale = 5;
}

message RegisterMobileRequest {
    string phone = 1;
    string mobile_id = 2;
    string password = 3;
    string family_name = 4;
    string given_name = 5;
    string locale = 6;
    string company = 7;
}

message Account {
    int64 id = 1;
    string email = 2;
    string phone = 3;
    string family_name = 4;
    string given_name = 5;
    string locale = 6;
    string company = 7;
}

message AddMobileRequest {
    string phone = 1;
    string mobile_id = 2;
    string password = 3;
}

message ActivateRequest {
    string username = 1;
    int64 code = 2;
}

message RetrieveRequest {
    int64 id = 1;
}

message SearchRequest {
    string search = 1;
}

message UpdateRequest {
    int64 id = 1;
    string family_name = 3;
    string given_name = 4;
    string locale = 5;
    string company = 6;
}

message UpdateEmailRequest {
    string email = 1;
    string password = 2;
}

message UpdatePasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message InitResetMobilePasswordRequest {
    string mobile_id = 1;
}

message ResetPasswordRequest {
    string username = 1;
    string password = 2;
    int64 code = 3;
}

message DeleteRequest {
    string password = 1;
}

message ResendCodeRequest {
    string mobile_id = 1;
    Sender sender = 2;
}

enum Sender {
    ACTIVATION = 0;
    RESET = 1;
}

message VerifyOldPasswordRequest {
    string old_password = 1;
}

service Accounts {
    rpc RegisterEmail(RegisterEmailRequest) returns (google.protobuf.Empty);
    rpc RegisterMobile(RegisterMobileRequest) returns (google.protobuf.Empty);
    rpc AddMobile(AddMobileRequest) returns (google.protobuf.Empty);
    rpc Activate(ActivateRequest) returns (google.protobuf.Empty);
    rpc Retrieve(RetrieveRequest) returns (Account);
    rpc Search(SearchRequest) returns (stream Account);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc UpdateEmail(UpdateEmailRequest) returns (google.protobuf.Empty);
    rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty);
    rpc VerifyOldPassword(VerifyOldPasswordRequest) returns (google.protobuf.Empty);
    rpc InitResetMobilePassword(InitResetMobilePasswordRequest) returns (google.protobuf.Empty);
    rpc ResetPassword(ResetPasswordRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc ResendCode(ResendCodeRequest) returns (google.protobuf.Empty);
}