syntax = "proto3";

package account;

message Created {
    int64 id = 1;
    string username = 2;
}

message EmailActivationRequired {
    int64 id = 1;
    string email = 2;
    int64 code = 3;
}

message PhoneActivationRequired {
    int64 id = 1;
    string phone = 2;
    int64 code = 3;
}

message ResetMobilePasswordRequested {
    int64 id = 1;
    string phone = 2;
    int64 code = 3;
}

message PasswordUpdated {
    int64 id = 1;
    string username = 2;
}

message EmailUpdated {
    int64 id = 1;
    string old_email = 2;
    string new_email = 3;
}

message Activated {
    int64 id = 1;
    string username = 2;
}

message Deleted {
    int64 id = 1;
    string username = 2;
}